--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <img src="thumbnail.png" class="song-img">
 <h1>
- best bollyhood love mashup
+ Tera fittor jab se chadh gya re
 </h1>
 <p> nhi pta</p>
 <audio  id="song">
